# file-organizer

./: .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CPP20_CONCEPTS_EXPLAINED.md  LEARNING_PATH.md  QUICKSTART.md  README.md  build.sh  config.json.example  test_duplicate_detection.cpp
.github/workflows/: ci.yml
.kilocode/rules/: rules.md
.kilocode/workflows/: file-organizer-dev.md
benchmarks/: scan_benchmark.cpp
docs/: CATEGORIZATION_IMPROVEMENTS.md  DUPLICATE_DETECTION_QUICKSTART.md  DUPLICATE_DETECTION_TESTING.md  DUPLICATE_UI_IMPROVEMENTS.md  PHASE1_SUMMARY.md  PHASE1_WEEK2_SUMMARY.md  PROJECT_STATE.md  TESTING.md
include/: config.hpp  duplicate_detector.hpp  embedding_engine.hpp  file_scanner.hpp  history_database.hpp  history_entry.hpp  history_manager.hpp  logger.hpp  mime_detector.hpp  organizer.hpp  quarantine.hpp  ui.hpp  utils.hpp  vector_ops.hpp
scripts/: generate_test_duplicates.py
src/: config.cpp  duplicate_detector.cpp  embedding_engine.cpp  file_scanner.cpp  history_database.cpp  history_manager.cpp  logger.cpp  main.cpp  mime_detector.cpp  organizer.cpp  quarantine.cpp  ui.cpp  vector_ops.cpp
tests/: config_test.cpp  duplicate_detector_test.cpp  embedding_engine_test.cpp  file_scanner_test.cpp  history_database_test.cpp  history_manager_test.cpp  logger_test.cpp  mime_detector_test.cpp  organizer_test.cpp  quarantine_test.cpp  vector_ops_test.cpp
